--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
   <section class="cta">
     <div class="cta-content">
       <div class="container">
-        <h2>Mantenha-se Atualizado<br>das últimas notícias de Pernambuco!</h2>
+        <h2>Customizável!<br>Escolha somente os portais desejados.</h2>
         <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Let's Get Started!</a>
       </div>
     </div>
